refactored token utils, created api/validate endpoint
