# internal/routers/router.go
@@ -21,6 +21,8 @@ func GetRouter() http.Handler {
 	router.HandleFunc("/api/users/{id}", handlers.GetUserById).Methods("GET")
 	router.HandleFunc("/api/login", handlers.Login).Methods("POST")
 	router.HandleFunc("/api/refresh", handlers.RefreshTokens).Methods("POST")
+	router.HandleFunc("/api/validate", handlers.ValidateAccess).Methods("POST")
+	router.HandleFunc("/api/logout", handlers.ValidateAccess).Methods("POST")
 
 	// Swagger endpoint
 	router.PathPrefix("/swagger").Handler(httpSwagger.WrapHandler)
